<?xml version="1.0" encoding="utf-8"?>
<!--
    Track and Field Clipboard
    Copyright 2011 Jared Hatfield.  All rights reserved.
-->
<resources>

    <string name="_flights">#Flights</string>
    <string name="_participants">#Participants</string>
    <string name="about">About</string>
    <string name="add">Add</string>
    <string name="add_participant">Add Participant</string>
    <string name="app_name">Track and Field Clipboard</string>
    <string name="athlete">Athlete</string>
    <string name="athlete_name">Athlete Name</string>
    <string name="attempt">Attempt</string>
    <string name="author_info">Created by Jared Hatfield</string>
    <string name="best">Best</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Delete the participant?</string>
    <string name="delete_file">Delete File</string>
    <string name="edit_participant">Edit Participant</string>
    <string name="email_results">Email Results</string>
    <string name="error_hytek">HY-TEK file not parsed successfully.</string>
    <string name="event_date">Event Date</string>
    <string name="event_date_here">Event Date Here</string>
    <string name="event_name">Event Name</string>
    <string name="event_name_here">Event Name Here</string>
    <string name="event_type">Event Type</string>
    <string name="event_type_here">Event Type Here</string>
    <string name="failed_open">Failed to open file.</string>
    <string name="feet">Feet</string>
    <string name="filepicker_empty">No files or directories</string>
    <string name="filepicker_filename">filename</string>
    <string name="filepicker_select">Select File</string>
    <string name="final_participants">Final Participants</string>
    <string name="finals_marks">Final Marks</string>
    <string name="flight">Flight</string>
    <string name="flight_position">F/P</string>
    <string name="flights">Number of Flights</string>
    <string name="gender">Gender</string>
    <string name="gender_here">Gender Here</string>
    <string name="hint_add">Once you create an event, these options can not be changed.</string>
    <string name="hint_date">When the event is being contested.</string>
    <string name="hint_event_name">The name of the event.</string>
    <string name="hint_event_type">The type of event being contested.</string>
    <string name="hint_final_marks">The number of marks athletes get in the finals.</string>
    <string name="hint_final_participants">The number of athletes that move onto the finals.</string>
    <string name="hint_gender">The gender of the competitors.</string>
    <string name="hint_import">Copy and paste the meet entry information from HY-TEK into the following text field.</string>
    <string name="hint_number_of_flights">The number of flights before the finals.</string>
    <string name="hint_qualifying_marks">The number of marks athletes get in qualifying flights.</string>
    <string name="hint_units">Choose if measurements will be taken in feet and inches or in meters.</string>
    <string name="hytek_import">Import HY-TEK Data</string>
    <string name="import_data">Import Data</string>
    <string name="inches">Inches</string>
    <string name="loading">Loading. Please wait…</string>
    <string name="mark">Mark</string>
    <string name="meters">Meters</string>
    <string name="name">Name</string>
    <string name="new_event">New Event</string>
    <string name="next">Next</string>
    <string name="place">Place</string>
    <string name="position">Position</string>
    <string name="qualifying_marks">Qualifying Marks</string>
    <string name="record_measurement">Record Measurement</string>
    <string name="sample_results">Sample Results</string>
    <string name="save">Save</string>
    <string name="scratch">Foul</string>
    <string name="scratch_confirmation">Change score to foul?</string>
    <string name="spinner_flight_all">All Participants</string>
    <string name="spinner_flight_finals">Finals</string>
    <string name="spinner_results">Results</string>
    <string name="team">Team</string>
    <string name="team_name">Team Name</string>
    <string name="unaffiliated">Unaffiliated</string>
    <string name="unit">Units</string>
    <string name="warning_no_delete_participant">Switch to the All Participants view to delete a participant.</string>
    <string name="warning_no_edit_finals">Final marks can not be changed in the flight view.</string>
    <string name="warning_no_edit_flight">Qualifying marks can not be changed in finals view.</string>
    <string name="warning_no_edit_particiant">Switch to the All Participants view to edit a participant.</string>
    <string name="warning_no_edit_results">Marks can not be edited in the results view.</string>

    <string-array name="event_types">
        <item>Choose Event</item>
        <item>Discus</item>
        <item>Hammer Throw</item>
        <item>Javelin</item>
        <item>Long Jump</item>
        <item>Shot Put</item>
        <item>Triple Jump</item>
    </string-array>
    <string-array name="genders">
        <item>Choose Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="marks">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="units">
        <item>US</item>
        <item>Metric</item>
    </string-array>

</resources>