<?xml version="1.0" encoding="utf-8"?>
<!--
    Track and Field Clipboard
    Copyright 2011 Jared Hatfield.  All rights reserved.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_new_event"
        android:icon="@android:drawable/ic_input_add"
        android:showAsAction="always|withText"
        android:title="@string/new_event"/>
    <item
        android:id="@+id/menu_sample_results"
        android:icon="@android:drawable/ic_dialog_info"
        android:showAsAction="withText"
        android:title="@string/sample_results"/>
    <item
        android:id="@+id/menu_import_hy_tek"
        android:icon="@android:drawable/ic_dialog_info"
        android:showAsAction="withText"
        android:title="@string/hytek_import"/>
    <item
        android:id="@+id/menu_about"
        android:icon="@android:drawable/ic_dialog_info"
        android:showAsAction="withText"
        android:title="@string/about"/>

</menu>