<?xml version="1.0" encoding="utf-8"?>
<!--
    Track and Field Clipboard
    Copyright 2011 Jared Hatfield.  All rights reserved.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/table_padding" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingRight="@dimen/form_label_right_padding"
                android:paddingTop="@dimen/form_label_top_padding"
                android:text="@string/name"
                android:textSize="@dimen/font_size" />

            <EditText
                android:id="@+id/editText_event_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/event_name"
                android:inputType="textCapWords"
                android:maxLength="40"
                android:singleLine="true"
                android:width="@dimen/form_element_width" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/tip_padding_bottom"
                android:text="@string/hint_event_name"
                android:textColor="@color/tip"
                android:textSize="@dimen/font_tip" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/form_spacing" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingRight="@dimen/form_label_right_padding"
                android:paddingTop="@dimen/form_label_top_padding"
                android:text="@string/event_type"
                android:textSize="@dimen/font_size" />

            <Spinner
                android:id="@+id/spinner_event_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="@dimen/form_element_width" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/tip_padding_bottom"
                android:text="@string/hint_event_type"
                android:textColor="@color/tip"
                android:textSize="@dimen/font_tip" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/form_spacing" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingRight="@dimen/form_label_right_padding"
                android:paddingTop="@dimen/form_label_top_padding"
                android:text="@string/gender"
                android:textSize="@dimen/font_size" />

            <Spinner
                android:id="@+id/spinner_event_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="@dimen/form_element_width" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/tip_padding_bottom"
                android:text="@string/hint_gender"
                android:textColor="@color/tip"
                android:textSize="@dimen/font_tip" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/form_spacing" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingRight="@dimen/form_label_right_padding"
                android:paddingTop="@dimen/form_label_top_padding"
                android:text="@string/date"
                android:textSize="@dimen/font_size" />

            <EditText
                android:id="@+id/editText_event_date"
                android:layout_width="wrap_content"
                android:inputType="date"
                android:layout_height="wrap_content"
                android:hint="@string/event_date"
                android:singleLine="true"
                android:width="@dimen/form_element_width" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/tip_padding_bottom"
                android:text="@string/hint_date"
                android:textColor="@color/tip"
                android:textSize="@dimen/font_tip" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/form_spacing" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingRight="@dimen/form_label_right_padding"
                android:paddingTop="@dimen/form_label_top_padding"
                android:text="@string/qualifying_marks"
                android:textSize="@dimen/font_size" />

            <Spinner
                android:id="@+id/spinner_event_qualifying_marks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="@dimen/form_element_width" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/tip_padding_bottom"
                android:text="@string/hint_qualifying_marks"
                android:textColor="@color/tip"
                android:textSize="@dimen/font_tip" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/form_spacing" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingRight="@dimen/form_label_right_padding"
                android:paddingTop="@dimen/form_label_top_padding"
                android:text="@string/finals_marks"
                android:textSize="@dimen/font_size" />

            <Spinner
                android:id="@+id/spinner_event_final_marks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="@dimen/form_element_width" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/tip_padding_bottom"
                android:text="@string/hint_final_marks"
                android:textColor="@color/tip"
                android:textSize="@dimen/font_tip" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/form_spacing" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingRight="@dimen/form_label_right_padding"
                android:paddingTop="@dimen/form_label_top_padding"
                android:text="@string/final_participants"
                android:textSize="@dimen/font_size" />

            <EditText
                android:id="@+id/editText_event_final_participants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:width="@dimen/form_element_width" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/tip_padding_bottom"
                android:text="@string/hint_final_participants"
                android:textColor="@color/tip"
                android:textSize="@dimen/font_tip" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/form_spacing" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingRight="@dimen/form_label_right_padding"
                android:paddingTop="@dimen/form_label_top_padding"
                android:text="@string/flights"
                android:textSize="@dimen/font_size" />

            <EditText
                android:id="@+id/editText_event_flights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:width="@dimen/form_element_width" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/tip_padding_bottom"
                android:text="@string/hint_number_of_flights"
                android:textColor="@color/tip"
                android:textSize="@dimen/font_tip" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/form_spacing" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingRight="@dimen/form_label_right_padding"
                android:paddingTop="@dimen/form_label_top_padding"
                android:text="@string/unit"
                android:textSize="@dimen/font_size" />

            <Spinner
                android:id="@+id/spinner_event_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="@dimen/form_element_width" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/tip_padding_bottom"
                android:text="@string/hint_units"
                android:textColor="@color/tip"
                android:textSize="@dimen/font_tip" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/form_spacing" >

            <TextView />

            <Button
                android:id="@+id/button_add_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onAddClick"
                android:text="@string/add" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/tip_padding_bottom"
                android:text="@string/hint_add"
                android:textColor="@color/tip"
                android:textSize="@dimen/font_tip" />
        </TableRow>
    </TableLayout>

</ScrollView>