<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" android:orientation="vertical">
    <TableLayout 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        <TableRow 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content">
            <TextView 
                android:textStyle="bold" 
                android:paddingRight="@dimen/label_right_padding" 
                android:layout_height="wrap_content" 
                android:text="@string/name" 
                android:layout_width="fill_parent" 
                android:layout_weight="1" 
                android:gravity="right" 
                android:textSize="@dimen/font_size" />
            <TextView 
                android:text="Event Name Here" 
                android:id="@+id/textView_event_name" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:layout_weight="2" 
                android:textSize="@dimen/font_size" />
            <TextView 
                android:textStyle="bold" 
                android:paddingRight="@dimen/label_right_padding" 
                android:layout_height="wrap_content" 
                android:text="@string/date" 
                android:layout_width="fill_parent" 
                android:layout_weight="1" 
                android:gravity="right" 
                android:textSize="@dimen/font_size" />
            <TextView 
                android:text="Event Date Here" 
                android:id="@+id/textView_event_date" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:layout_weight="2" 
                android:textSize="@dimen/font_size" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView 
                android:textStyle="bold" 
                android:paddingRight="@dimen/label_right_padding" 
                android:layout_height="wrap_content" 
                android:layout_width="fill_parent" 
                android:layout_weight="1" 
                android:gravity="right" 
                android:textSize="@dimen/font_size" 
                android:text="@string/event_type"/>
            <TextView 
                android:text="Event Type Here" 
                android:id="@+id/textView_event_type" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:layout_weight="2" 
                android:textSize="@dimen/font_size" />
            <TextView 
                android:textStyle="bold" 
                android:paddingRight="@dimen/label_right_padding" 
                android:layout_height="wrap_content" 
                android:layout_width="fill_parent" 
                android:layout_weight="1" 
                android:gravity="right" 
                android:textSize="@dimen/font_size" 
                android:text="@string/gender"/>
            <TextView 
                android:text="Gender Here" 
                android:id="@+id/textView_event_gender" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:layout_weight="2" 
                android:textSize="@dimen/font_size" />
        </TableRow>
    
    </TableLayout>
    <ScrollView
    	android:layout_height="fill_parent"
    	android:layout_width="match_parent"
    	android:padding="@dimen/table_participant_padding">
	    <TableLayout 
	        android:id="@+id/tableLayout_participants" 
	        android:layout_width="match_parent" 
	        android:layout_height="wrap_content"
	        android:padding="@dimen/table_participant_padding">
	    </TableLayout>
    </ScrollView>
    
</LinearLayout>
